# UpworkScanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py
src/Scanner/: app.py  model.py  page_navigator.py  scanner.py  upwork_login.py  upwork_manager.py  upwork_scrapper.py  web_driver.py
