[tool.poetry]
name = "upworkscanner"
version = "0.1.0"
description = ""
authors = ["Renata Hauryliuk <chromic507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^1.10.7"
bs4 = "^0.0.1"
python-dotenv = "^1.0.0"
playwright = "^1.31.1"
types-beautifulsoup4 = "^4.12.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
